Added my introduction under section A

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -29,11 +29,14 @@ limitations under the License.
       </ul>
     </nav>
     <h1>About Our Team</h1>
-    <h2>Teammate A Name</h2>
-    <ul>
-      <li>Summer Feelz: </li>
-      <li>Aspirational Hobby: </li>
-      <li>Ask me About: </li>
+    <h2 style="background-color:pink;color:#FF1493;"> Feza Roheel </h2>
+    <ul style="background-color:pink;color:#FF1493;">
+      <li><b> Summer Feelz: </b><br>
+        1) Happy 2) Motivated 3) Excited </li>
+      <li> <b>Aspirational Hobby: </b> <br>
+        Travelling and Exploring the world </li>
+      <li><b>Ask me About:</b></br>
+        Gender Equality, Art and Music</li>
     </ul>
     <h2>Teammate B Name</h2>
     <ul>
