--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -29,14 +29,14 @@ limitations under the License.
       </ul>
     </nav>
     <h1>About Our Team</h1>
-    <h2 style="background-color:pink;color:#FF1493;"> Feza Roheel </h2>
+    <h2 style="background-color:pink;color:#FF1493;"> Feza Roheel <img src="http://www.seaviewstickers.co.uk/shop/media/catalog/product/cache/1/thumbnail/600x600/9df78eab33525d08d6e5fb8d27136e95/h/o/hot_pink_11.jpg" alt="x" width="32" height="32"></h2>
     <ul style="background-color:pink;color:#FF1493;">
       <li><b> Summer Feelz: </b><br>
-        1) Happy 2) Motivated 3) Excited </li>
+        <ol> <li> Happy</li> <li> Motivated</li> <li> Excited</li></ol></li>
       <li> <b>Aspirational Hobby: </b> <br>
         Travelling and Exploring the world </li>
       <li><b>Ask me About:</b></br>
-        Gender Equality, Art and Music</li>
+        <ol><li> Gender Equality</li>  <li> Art</li> <li> Music</li></ol></li>
     </ul>
     <h2>Teammate B Name</h2>
     <ul>
