added Ayman's info in teammate-B section

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -38,11 +38,26 @@ limitations under the License.
       <li><b>Ask me About:</b></br>
         <ol><li> Gender Equality</li>  <li> Art</li> <li> Music</li></ol></li>
     </ul>
-    <h2>Teammate B Name</h2>
+    <h2 style="background-color:#87ceeb;color:#0000ff;">Aiman Hasan</h2>
     <ul>
-      <li>Summer Feelz: </li>
-      <li>Aspirational Hobby: </li>
-      <li>Ask me About: </li>
+      <li style="color:#0000ff"><b>Summer Feelz: </b></li>
+		<ol>
+			<li>Sleepy</li>
+			<li>Hungry</li>
+			<li>Carefree</li>
+		</ol>
+      <li style="color:#0000ff"><b>Aspirational Hobby:</b></li>
+		<ol>
+			<li>Making Games</li>
+			<li>Calligraphy</li>
+			
+		</ol>
+      <li style="color:#0000ff"><b>Ask me About: </b></li>
+		<ol>
+			<li>Make-up</li>
+			<li>Cooking</li>
+			<li>Books</li>
+		</ol>
     </ul>
     <h2>Teammate C Name</h2>
     <ul>
