--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,10 +23,10 @@ limitations under the License.
     <script src="/js/navigation-loader.js"></script>
       <style>
         body {
-          background-image: url("https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
+          background: url("https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80%22");
           width=100% ; height=100%;
         }
-</style>
+      </style>
   </head>
   <body onload="addLoginOrLogoutLinkToNavigation();">
     <nav>
@@ -41,7 +41,7 @@ limitations under the License.
             <b>Team 42 </b>
         <ol> <li>Feza </li>
         <li>Aiman</li>
-        <li>Waleed</li>
+        <li>Waqar</li>
         <li>Azan</li></ol>
         </font>
     </center>
