Moved index page css to index-page.css file

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,13 +20,9 @@ limitations under the License.
     <meta charset="UTF-8">
     <title>CodeU 2019 Starter Project</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/index-page.css">
+   
     <script src="/js/navigation-loader.js"></script>
-      <style>
-        body {
-          background: url("https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80%22");
-          width=100% ; height=100%;
-        }
-      </style>
   </head>
   <body onload="addLoginOrLogoutLinkToNavigation();">
     <nav>
@@ -38,11 +34,13 @@ limitations under the License.
 
     <center>
         <font size="7" color="white">
-            <b>Team 42 </b>
-        <ol> <li>Feza </li>
-        <li>Aiman</li>
-        <li>Waqar</li>
-        <li>Azan</li></ol>
+          <b>Team 42 </b>
+          <ol> 
+            <li>Feza </li>
+            <li>Aiman</li>
+            <li>Waqar</li>
+            <li>Azan</li>
+          </ol>
         </font>
     </center>
 
