Added community page link to other pages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,6 +29,8 @@ limitations under the License.
       <ul id="navigation">
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus.html">About Our Team</a></li>
+        <li><a href="/community.html">Community</a></li>
+
       </ul>
     </nav>
 
