--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -26,6 +26,8 @@ limitations under the License.
       <ul id="navigation">
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus.html">About Our Team</a></li>
+        <li><a href="/community.html">Community</a></li>
+
       </ul>
     </nav>
     <h1>About Our Team</h1>
