--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -28,6 +28,8 @@ limitations under the License.
       <ul id="navigation">
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus.html">About Our Team</a></li>
+        <li><a href="/community.html">Community</a></li>
+
       </ul>
     </nav>
     <h1 id="page-title">User Page</h1>
