--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,7 @@ limitations under the License.
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus.html">About Our Team</a></li>
         <li><a href="/community.html">Community</a></li>
+        <li><a href="/stats.html">Stats</a></li>
 
       </ul>
     </nav>
