--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -33,6 +33,15 @@
 </head>
 <body onload="buildUI()">
 <div id="content">
+    <nav>
+        <ul id="navigation">
+            <li><a href="/">Home</a></li>
+            <li><a href="/aboutus.html">About Our Team</a></li>
+            <li><a href="/community.html">Community</a></li>
+            <li><a href="/stats.html">Stats</a></li>
+
+        </ul>
+    </nav>
   <h1>Site Statistics</h1>
   <hr/>
   <div id="stats-container">Loading...</div>
