--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -20,16 +20,15 @@ limitations under the License.
     <meta charset="UTF-8">
     <title>About Us</title>
     <link rel="stylesheet" href="/css/main.css">
-  </head>
-  </head>
-    <nav>
-      <ul id="navigation">
-        <li><a href="/">Home</a></li>
-        <li><a href="/aboutus.html">About Our Team</a></li>
-        <li><a href="/community.html">Community</a></li>
+    <script src="/js/navigation-loader.js"></script>
 
+  </head>
+  <body onload="addNaviMenues();">
+    <nav>
+      <ul class = "topnav" id="navigation">
       </ul>
     </nav>
+
     <h1>About Our Team</h1>
     <h2 style="background-color:pink;color:#FF1493;"> Feza Roheel <img src="http://www.seaviewstickers.co.uk/shop/media/catalog/product/cache/1/thumbnail/600x600/9df78eab33525d08d6e5fb8d27136e95/h/o/hot_pink_11.jpg" alt="x" width="32" height="32"></h2>
     <ul style="background-color:pink;color:#FF1493;">
