--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="UTF-8">
@@ -24,16 +25,12 @@ limitations under the License.
    
     <script src="/js/navigation-loader.js"></script>
   </head>
-  <body onload="addLoginOrLogoutLinkToNavigation();">
+  <body onload="addNaviMenues();">
     <nav>
-      <ul id="navigation">
-        <li><a href="/">Home</a></li>
-        <li><a href="/aboutus.html">About Our Team</a></li>
-        <li><a href="/community.html">Community</a></li>
-        <li><a href="/stats.html">Stats</a></li>
-
+      <ul class = "topnav" id="navigation">
       </ul>
     </nav>
+
 
     <center>
         <font size="7" color="white">
