--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -3,6 +3,8 @@
 <head>
   <title>Stats</title>
   <link rel="stylesheet" href="/css/main.css">
+  <script src="/js/navigation-loader.js"></script>
+
   
   <script>
     // Fetch stats and display them in the page.
@@ -31,17 +33,14 @@
     }
   </script>
 </head>
-<body onload="buildUI()">
-<div id="content">
+<body onload="addNaviMenues(); buildUI()">
     <nav>
-        <ul id="navigation">
-            <li><a href="/">Home</a></li>
-            <li><a href="/aboutus.html">About Our Team</a></li>
-            <li><a href="/community.html">Community</a></li>
-            <li><a href="/stats.html">Stats</a></li>
-
-        </ul>
+      <ul class = "topnav" id="navigation">
+      </ul>
     </nav>
+    
+
+<div id="content">
   <h1>Site Statistics</h1>
   <hr/>
   <div id="stats-container">Loading...</div>
