--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -22,16 +22,15 @@ limitations under the License.
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/user-page.css">
     <script src="/js/user-page-loader.js"></script>
-  </head>
-  <body onload="buildUI();">
-    <nav>
-      <ul id="navigation">
-        <li><a href="/">Home</a></li>
-        <li><a href="/aboutus.html">About Our Team</a></li>
-        <li><a href="/community.html">Community</a></li>
+    <script src="/js/navigation-loader.js"></script>
 
+  </head>
+  <body onload="addNaviMenues(); buildUI();">
+    <nav>
+      <ul class = "topnav" id="navigation">
       </ul>
     </nav>
+      
     <h1 id="page-title">User Page</h1>
 
     <form id="message-form" action="/messages" method="POST" class="hidden">
