--- a/src/main/webapp/chart.html
+++ b/src/main/webapp/chart.html
@@ -2,36 +2,41 @@
 <html>
   <head>
     <title>A New Chart</title>
-	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-	<script type="text/javascript">
-    google.charts.load('current', {packages: ['corechart']});
-    google.charts.setOnLoadCallback(drawChart);
-    function drawChart(){
-      //to be filled in later
-	  var book_data = new google.visualization.DataTable();
-	  //define columns for the DataTable instance
-		book_data.addColumn('string', 'Book Title');
-		book_data.addColumn('number', 'Votes');
-            
-		//add data to book_data
-		book_data.addRows([
-			["The Best We Could Do", 6],
-			["Sing, Unburied, Sing", 10],
-			["The Book of Unknown Americans", 7],
-			["The 57 Bus", 4],
-			["The Handmaid's Tale", 8]
-		]);
-		var chart = new google.visualization.PieChart(document.getElementById('book_chart'));
-		var chart_options = {
-                          width: 800,
-                          height: 400
-            };
-		chart.draw(book_data, chart_options);
-    }
-</script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        google.charts.load('current', {packages: ['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+        function drawChart(){
+          fetch("/bookchart")
+              .then((response) => {
+                return response.json();
+              })
+              .then((bookJson) => {
+                var bookData = new google.visualization.DataTable();
+                //define columns for the DataTable instance
+                bookData.addColumn('string', 'Book Title');
+                bookData.addColumn('number', 'Rating');
+
+                for (i = 0; i < bookJson.length; i++) {
+                  bookRow = [];
+                  var title = bookJson[i].title;
+                  var ratings = bookJson[i].rating;
+                  bookRow.push(title, ratings);
+
+                  bookData.addRow(bookRow);
+               }
+               var chartOptions = {
+                                 width: 800,
+                                 height: 400
+                   };
+               var bookChart = new google.visualization.PieChart(document.getElementById('book_chart'));
+               bookChart.draw(bookData, chartOptions);
+           })
+        }
+    </script>
   </head>
   <body>
     <h1>Chart Project</h1>
-	<div id="book_chart"></div>
+    <div id="book_chart"></div>
   </body>
 </html>
