--- a/src/main/webapp/translate-page.html
+++ b/src/main/webapp/translate-page.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Translation</title>
+  <script src="/js/navigation-loader.js"></script>
+
 
     <script>
       function requestTranslation() {
@@ -41,7 +43,11 @@
     </style>
 
 </head>
-<body>
+<body onload="addNaviMenues();">
+  <nav>
+      <ul class = "topnav" id="navigation">
+      </ul>
+  </nav>
 <h1>Translation</h1>
 <p>Type a message and select a language, then click submit to translate it.</p>
 
