--- a/src/main/webapp/translate-page.html
+++ b/src/main/webapp/translate-page.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Translation</title>
   <script src="/js/navigation-loader.js"></script>
+  <link rel="stylesheet" href="/css/main.css">
+
 
 
     <script>
@@ -43,7 +45,7 @@
     </style>
 
 </head>
-<body onload="addNaviMenues();">
+<body onload= "addNaviMenues();">
   <nav>
       <ul class = "topnav" id="navigation">
       </ul>
