--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,26 +46,26 @@ limitations under the License.
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="../images/ny.jpg" alt="New York" width="1200" height="700">
+          <img src="../images/image-7.jpg" alt="Share your Success" width="1200" height="700">
           <div class="carousel-caption">
-            <h3>New York</h3>
-            <p>The atmosphere in New York is lorem ipsum.</p>
+            <h3>Share your achievements and experience with others</h3>
+            <p> Help and support each other by sharing your knowledge and experience </p>
           </div>
         </div>
 
         <div class="item">
-          <img src="../images/chicago.jpg" alt="Chicago" width="1200" height="700">
+          <img src="../images/image-2.jpg" alt="CS" width="1200" height="700">
           <div class="carousel-caption">
-            <h3>Chicago</h3>
-            <p>Thank you, Chicago - A night we won't forget.</p>
+            <h3>CS scholarships for Pakistani students</h3>
+            <p>Stay updated with the latest notifications of scholarships</p>
           </div>
         </div>
 
         <div class="item">
-          <img src="../images/index-1.jpg" alt="Los Angeles" width="1200" height="700">
+          <img src="../images/image-5.png" alt="connections" width="1200" height="700">
           <div class="carousel-caption">
-            <h3>LA</h3>
-            <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
+            <h3> Dont know where to start?</h3>
+            <p>Gain knowledge and build your contacts by interacting with other pakistani students</p>
           </div>
         </div>
       </div>
@@ -81,50 +81,44 @@ limitations under the License.
       </a>
     </div>
 
-    <div class="container text-center">
-      <h3>THE BAND</h3>
-      <p><em>We love music!</em></p>
-      <p>We have created a fictional band website. Lorem ipsum..</p>
+    <div class="container text-center" style="color:white;">
+      <h3>Portal for Scholarships and Opportunities for Pakistani University Students pursuing Computer Science</h3>
+      <p><em> Greater Satisfaction comes from uplifting and helping others</em></p>
+      <p>Help support each other learn and grow</p>
       <br>
       <div class="row">
         <div class="col-sm-4">
-          <p class="text-center"><strong>Name</strong></p><br>
+          <p class="text-center"><strong>Connect with other Pakistani CS students</strong></p><br>
           <a href="#demo" data-toggle="collapse">
-            <img src="../images/index-1.jpg" class="img-circle person" alt="Random Name" width="155" height="155">
+            <img src="../images/Messages.png" class="img-circle person" alt="Random Name" width="155" height="155">
           </a>
           <div id="demo" class="collapse">
-            <p>Guitarist and Lead Vocalist</p>
-            <p>Loves long walks on the beach</p>
-            <p>Member since 1988</p>
+            <p>Build your contacts by asking each other questions and vice versa.</p>
           </div>
         </div>
         <div class="col-sm-4">
-          <p class="text-center"><strong>Name</strong></p><br>
+          <p class="text-center"><strong>Be more aware of available Scholarships</strong></p><br>
           <a href="#demo2" data-toggle="collapse">
-            <img src="../images/index-1.jpg" class="img-circle person" alt="Random Name" width="155" height="155">
+            <img src="../images/awareness.jpg" class="img-circle person" alt="Random Name" width="155" height="155">
           </a>
           <div id="demo2" class="collapse">
-            <p>Drummer</p>
-            <p>Loves drummin'</p>
-            <p>Member since 1988</p>
+            <p>Get information regarding a scholarship by reading the information provided and visiting links.</p>
           </div>
         </div>
         <div class="col-sm-4">
-          <p class="text-center"><strong>Name</strong></p><br>
+          <p class="text-center"><strong>Apply and learn! </strong></p><br>
           <a href="#demo3" data-toggle="collapse">
-            <img src="../images/index-1.jpg" class="img-circle person" alt="Random Name" width="155" height="155">
+            <img src="../images/learn.jpg" class="img-circle person" alt="Random Name" width="155" height="155">
           </a>
           <div id="demo3" class="collapse">
-            <p>Bass player</p>
-            <p>Loves math</p>
-            <p>Member since 2005</p>
+            <p>Failure is worse than not trying. Consistency and hard work is the key to success.</p>
           </div>
         </div>
        </div>
     </div>
 
      <center>
-          <p><strong>Already a member?</strong></p>
+       <p style="color:white;"><font size="5"><strong>Already a member?</strong></font></p>
           <form action="/login">
               <button class="btn" type="submit" >Login</button>
           </form>
