--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -4,7 +4,9 @@
 	<title>Login V5</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/js/navigation-loader.js"></script>
+	<script src="/js/navigation-loader.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
+	
 
 <!--===============================================================================================-->	
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
@@ -48,7 +50,7 @@
 						Facebook
 					</a>
  -->
-					<a href="#" class="btn-google m-b-20">
+					<a href="/login" class="btn-google m-b-20">
 						<img src="images/icons/icon-google.png" alt="GOOGLE">
 						Google
 					</a>
