--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -23,6 +23,7 @@ limitations under the License.
     <link rel="stylesheet" href="/css/user-page.css">
     <script src="/js/user-page-loader.js"></script>
     <script src="/js/navigation-loader.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
 
   </head>
   <body onload="addNaviMenues(); buildUI();">
