--- a/src/main/webapp/Insertionpage.html
+++ b/src/main/webapp/Insertionpage.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xl-8 offset-xl-2 py-5">
-            <h1> Opportunity Insertion form </h1>
+            <h1> Opportunity Insertion Form </h1>
         </div>
     </div>
 </div>
