Cleared the page

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -30,81 +30,10 @@ limitations under the License.
     </nav>
 
     <h1>About Our Team</h1>
-    <h2 style="background-color:pink;color:#FF1493;"> Feza Roheel <img src="http://www.seaviewstickers.co.uk/shop/media/catalog/product/cache/1/thumbnail/600x600/9df78eab33525d08d6e5fb8d27136e95/h/o/hot_pink_11.jpg" alt="x" width="32" height="32"></h2>
-    <ul style="background-color:pink;color:#FF1493;">
-      <li><b> Summer Feelz: </b><br>
-        <ol> <li> Happy</li> <li> Motivated</li> <li> Excited</li></ol></li>
-      <li> <b>Aspirational Hobby: </b> <br>
-        Travelling and Exploring the world </li>
-      <li><b>Ask me About:</b></br>
-        <ol><li> Gender Equality</li>  <li> Art</li> <li> Music</li></ol></li>
-    </ul>
-    <h2 style="background-color:#87ceeb;color:#0000ff;">Aiman Hasan</h2>
-    <ul>
-      <li style="color:#0000ff"><b>Summer Feelz: </b></li>
-		<ol>
-			<li>Sleepy</li>
-			<li>Hungry</li>
-			<li>Carefree</li>
-		</ol>
-      <li style="color:#0000ff"><b>Aspirational Hobby:</b></li>
-		<ol>
-			<li>Making Games</li>
-			<li>Calligraphy</li>
-			
-		</ol>
-      <li style="color:#0000ff"><b>Ask me About: </b></li>
-		<ol>
-			<li>Make-up</li>
-			<li>Cooking</li>
-			<li>Books</li>
-		</ol>
-    </ul>
-    <h2 style="color:#0000ff;">Waqar Ahmed</h2>
-    <ul>
-      <li style="color:#0000ff"><b>Summer Feelz: </b></li>
-    <ul>
-      <li>Excited</li>
-      <li>Sleepy</li>
-      <li>Joyous</li>
-    </ul>
+    <h2>Feza Roheel</h2>
+    <h2>Aiman Hasan</h2>
+    <h2>Waqar Ahmed</h2>
+    <h2>Azan Bin Zahid</h2>
 
-      <li style="color:#0000ff"><b>Aspirational Hobby:</b></li>
-    <ul>
-      <li>Programming</li>
-      <li>Book Reading</li>
-      <li>Analytical Problem Solving</li>
-    </ul>
-      <li style="color:#0000ff"><b>Ask me About: </b></li>
-    <ul>
-      <li>Books</li>
-      <li>Psychology</li>
-      <li>Algorithms & Data Structures</li>
-    </ul>
-    </ul>
-
-    <!-- <h2>Teammate D Name (delete if you team only has 3 students) </h2> -->
-    <h2 style="background-color:#800080;color:#ffffff;">Azan Bin Zahid</h2>
-    <ul>
-      <li style="color:#800080"><b>Summer Feelz: </b></li>
-		<ol>
-			<li>Reasearch</li>
-			<li>CodeU</li>
-			<li>Xbox</li>
-		</ol>
-      <li style="color:#800080"><b>Aspirational Hobby:</b></li>
-		<ol>
-			<li>Trevelling</li>
-			<li>Raspberry Pi</li>
-			<li>Urdu Literature</li>
-			
-		</ol>
-      <li style="color:#800080"><b>Ask me About: </b></li>
-		<ol>
-			<li>Smartphones</li>
-			<li>How to repair Laptops and PCs</li>
-			<li>Seasons and Movies</li>
-		</ol>
-    </ul>
   </body>
 </html>
