--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -17,11 +17,15 @@ limitations under the License.
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>About Us</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/navigation-loader.js"></script>
-
+      <meta charset="UTF-8">
+      <title>About Us</title>
+      <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/css/aboutus.css">
+      <script src="/js/navigation-loader.js"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   </head>
   <body onload="addNaviMenues();">
     <nav>
@@ -30,10 +34,15 @@ limitations under the License.
     </nav>
 
     <h1>About Our Team</h1>
-    <h2>Feza Roheel</h2>
-    <h2>Aiman Hasan</h2>
-    <h2>Waqar Ahmed</h2>
-    <h2>Azan Bin Zahid</h2>
+
+    <div class="container-fluid bg-1 text-center">
+        <h3>Team 42</h3>
+        Feza<img src="../images/fezaaboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
+        Aiman<img src="../images/aimanaboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
+        Waqar<img src="../images/waqaraboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
+        Azan<img src="../images/azanaboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
+    </div>
+
 
   </body>
 </html>
