--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -43,6 +43,14 @@ limitations under the License.
         Azan<img src="../images/azanaboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
     </div>
 
+    <div class="container-fluid bg-2 text-center">
+            <h3>Features Implemented</h3> <br>
+            <h4>Feza :  Images part 1 , Styling <h4>
+            <h4>Aiman :  Charts part 1 , Charts part 2</h4>
+            <h4>Waqar :  ML Translation , Opportunities Back-End and Design </h4>
+            <h4>Azan :  Styled Text part 1 , Styled Text part 2 </h4>
+    </div>
+
 
   </body>
 </html>
