adds opportunity details paramter

--- a/src/main/webapp/OpportunityInsert.html
+++ b/src/main/webapp/OpportunityInsert.html
@@ -132,6 +132,14 @@
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_OpportunityDetails">Details</label>
+                    <input id="form_OpportunityDetails" type="text" name="opportunityDetails" class="form-control" placeholder="Please enter Opportunity Details " required="required" data-error="Opportunity details is required.">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+
         </div>
 
         <div class="row">
