Fixed a typo in aboutus,removed unnecessary links and added requiredcode to make images upload correctly(updated formhandlerservlet)

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -45,7 +45,7 @@ limitations under the License.
 
     <div class="container-fluid bg-2 text-center">
             <h3>Features Implemented</h3> <br>
-            <h4>Feza :  Images part 1 , Styling <h4>
+            <h4>Feza :  Images part 1 , Styling </h4>
             <h4>Aiman :  Charts part 1 , Charts part 2</h4>
             <h4>Waqar :  ML Translation , Opportunities Back-End and Design </h4>
             <h4>Azan :  Styled Text part 1 , Styled Text part 2 </h4>
