--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,13 +20,8 @@ limitations under the License.
   <head>
     <meta charset="UTF-8">
     <title>CodeU 2019 Starter Project</title>
-    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/index-page.css">
     <script src="/js/navigation-loader.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
   </head>
   <body onload="addNaviMenues();">
@@ -35,94 +30,44 @@ limitations under the License.
       </ul>
     </nav>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="../images/image-7.jpg" alt="Share your Success" width="1200" height="700">
-          <div class="carousel-caption">
-            <h3>Share your achievements and experience with others</h3>
-            <p> Help and support each other by sharing your knowledge and experience </p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="../images/image-2.jpg" alt="CS" width="1200" height="700">
-          <div class="carousel-caption">
-            <h3>CS scholarships for Pakistani students</h3>
-            <p>Stay updated with the latest notifications of scholarships</p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="../images/image-5.png" alt="connections" width="1200" height="700">
-          <div class="carousel-caption">
-            <h3> Dont know where to start?</h3>
-            <p>Gain knowledge and build your contacts by interacting with other pakistani students</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <div class="container text-center" style="color:white;">
-      <h3>Portal for Scholarships and Opportunities for Pakistani University Students pursuing Computer Science</h3>
-      <p><em> Greater Satisfaction comes from uplifting and helping others</em></p>
-      <p>Help support each other learn and grow</p>
-      <br>
-      <div class="row">
-        <div class="col-sm-4">
-          <p class="text-center"><strong>Connect with other Pakistani CS students</strong></p><br>
-          <a href="#demo" data-toggle="collapse">
-            <img src="../images/Messages.png" class="img-circle person" alt="Random Name" width="155" height="155">
-          </a>
-          <div id="demo" class="collapse">
-            <p>Build your contacts by asking each other questions and vice versa.</p>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <p class="text-center"><strong>Be more aware of available Scholarships</strong></p><br>
-          <a href="#demo2" data-toggle="collapse">
-            <img src="../images/awareness.jpg" class="img-circle person" alt="Random Name" width="155" height="155">
-          </a>
-          <div id="demo2" class="collapse">
-            <p>Get information regarding a scholarship by reading the information provided and visiting links.</p>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <p class="text-center"><strong>Apply and learn! </strong></p><br>
-          <a href="#demo3" data-toggle="collapse">
-            <img src="../images/learn.jpg" class="img-circle person" alt="Random Name" width="155" height="155">
-          </a>
-          <div id="demo3" class="collapse">
-            <p>Failure is worse than not trying. Consistency and hard work is the key to success.</p>
-          </div>
-        </div>
-       </div>
-    </div>
-
-     <center>
-       <p style="color:white;"><font size="5"><strong>Already a member?</strong></font></p>
-          <form action="/login">
+<!--  <header> -->
+	<div class="bg">
+		<h1 class="headings">COMPUTER SCIENCE OPPORTUNITIES</h1>
+		<div class="forms" style = "transform: translate(0%, 30%)">
+		<center>
+			<p style="color:white;"><font size="5"><strong>Already a member?</strong></font></p>
+			<form action="/login">
               <button class="btn" type="submit" >Login</button>
-          </form>
-     </center>
-
-  </body>
+			</form>
+		</center>
+		</div>
+		<div class="content">
+			<div class="kolom">
+				<div class="atas">
+					<img src="/images/Messages.png"></div>
+				<div class="tengah">
+				<h1>CONNECT</h1></div>
+				
+				<div class="bawah"><p>Build your contacts by joining a strong community of students seeking for opportunities.</p></div>
+			</div>
+			<div class="kolom">
+				<div class="atas">
+				<img src="/images/awareness1.png"></div>
+				<div class="tengah">
+				<h1>LEARN & APPLY</h1></div>
+				<div class="bawah">
+				<p>Get information regarding a scholarship by reading the information provided and visiting links</p></div>
+			</div>
+			<div class="kolom">
+				<div class="atas">
+				<img src="/images/win.png"></div>
+				
+				<div class="tengah">
+				<h1>WIN</h1></div>
+				<div class="bawah"><p>Failure is worse than not trying. Consistency and hard work is the key to success</p></div>
+			</div>
+		</div>
+	</div>
+<!--	</header> -->
+	</body>
 </html>
