added city member in opportunity class

--- a/src/main/webapp/OpportunityInsert.html
+++ b/src/main/webapp/OpportunityInsert.html
@@ -132,13 +132,13 @@
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                     <div class="form-group">
                         <label for="form_State">State</label>
                         <input id="form_State" type="text" name="State" class="form-control" placeholder="Please enter Country or State Name " required="required" data-error="State is required.">
                         <div class="help-block with-errors"></div>
                     </div>
-                </div>
+                </div> -->
         </div>
         <div class="row">
             <div class="col-md-6">
