--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -22,7 +22,8 @@
             var cities = ["Lahore", "Karachi", "New York", "Perth", "London", "Berlin", "Mali"] //fetch from backend along with tile and description
 
             cities.forEach((city)=>{
-                fetch('https://maps.googleapis.com/maps/api/geocode/json?address='+city+'&key=ADD-API-KEY')
+
+                fetch('https://maps.googleapis.com/maps/api/geocode/json?address='+city+'&key=ADD-API-KEY-HERE')
                 .then(respose=>{
                     return respose.json()
                 })
