--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -11,9 +11,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
+    <script src='/js/config.js'></script>
     
     <script>  
         function getCoordinates(){
+            const mapAPI = config.api
             const map = new google.maps.Map(document.getElementById('map'), {
                 center: {lat: 0, lng: 0},
                 zoom:3
@@ -23,7 +25,7 @@
 
             cities.forEach((city)=>{
 
-                fetch('https://maps.googleapis.com/maps/api/geocode/json?address='+city+'&key=ADD-API-KEY-HERE')
+                fetch('https://maps.googleapis.com/maps/api/geocode/json?address='+city+'&key='+mapAPI)
                 .then(respose=>{
                     return respose.json()
                 })
