--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -4,18 +4,27 @@
     <title>Opportunity Map</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPtFpGDAcqHrGU3W_vkIesB0K1AHWg8ck"></script>
-   <!-- Latest compiled and minified CSS -->
+    <script src='/js/config.js'></script>
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
-    <script src='/js/config.js'></script>
     
+    <!-- <script id="api" src=""></script> -->
+    <script>
+        const mapAPI = config.api
+        var script = document.createElement( 'script' );
+        script.type = 'text/javascript';
+        script.src = "https://maps.googleapis.com/maps/api/js?key=" + mapAPI;
+        document.head.append( script );
+    </script>
+
     <script>  
         function getCoordinates(){
             const mapAPI = config.api
+            
             const map = new google.maps.Map(document.getElementById('map'), {
                 center: {lat: 0, lng: 0},
                 zoom:3
