--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -31,9 +31,9 @@
             });
 
             var cities = ["Lahore", "Karachi", "New York", "Perth", "London", "Berlin", "Mali"] //fetch from backend along with tile and description
-
+            var id = 0
             cities.forEach((city)=>{
-
+                id = id + 1 //will get this from bacj-end as well
                 fetch('https://maps.googleapis.com/maps/api/geocode/json?address='+city+'&key='+mapAPI)
                 .then(respose=>{
                     return respose.json()
@@ -48,7 +48,7 @@
                         title: "TITLE"
                     });  
                     const infoWindow = new google.maps.InfoWindow({
-                        content: "DESCRIPTION"
+                        content: "<a href=opportunities.html?id=" + id + ">" + DESCRIPTION + "</a>"
                     });
                     marker.addListener('click', function() {
                         infoWindow.open(map, marker);
