added map servlet to fetch locations from back-end

--- a/src/main/webapp/OpportunityInsert.html
+++ b/src/main/webapp/OpportunityInsert.html
@@ -134,8 +134,8 @@
             </div>
             <div class="col-md-3">
                     <div class="form-group">
-                        <label for="form_State">State</label>
-                        <input id="form_State" type="text" name="State" class="form-control" placeholder="Please enter Country or State Name " required="required" data-error="State is required.">
+                        <label for="form_Country">Country</label>
+                        <input id="form_Country" type="text" name="Country" class="form-control" placeholder="Please enter Country or State Name " required="required" data-error="State is required.">
                         <div class="help-block with-errors"></div>
                     </div>
                 </div>
