--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -23,32 +23,47 @@
                 zoom:3
             });
 
-            var cities = ["Lahore", "Karachi", "New York", "Perth", "London", "Berlin", "Mali"] //fetch from backend along with tile and description
-            var id = 0
-            cities.forEach((city)=>{
-                fetch('https://maps.googleapis.com/maps/api/geocode/json?address='+city+'&key='+mapAPI)
-                .then(respose=>{
-                    return respose.json()
-                })
-                .then(function(jsonObject){
-                    return (jsonObject.results[0].geometry.location) //parse json object to get coordinates
-                })
-                .then((data)=>{
-                    const marker =  new google.maps.Marker({
-                        position: {lat: data.lat, lng: data.lng},
-                        map: map,
-                        animation:google.maps.Animation.BOUNCE,
-                        title: "TITLE"
-                    });  
-                    id = id + 1 //will get this from bacj-end as well
-                    const infoWindow = new google.maps.InfoWindow({
-                        content: "<a href=opportunities.html?id=" + id + ">" + "DESCRIPTION </a>"
-                    });
-                    marker.addListener('click', function() {
-                        infoWindow.open(map, marker);
-                        map.setZoom(5);
-                        map.setCenter(marker.getPosition());
-                        window.setTimeout(function() {map.setZoom(3);},5000);
+            var opportunityID = 0
+            fetch('/map') //get locations from back-end 
+            .then(data=>{
+                return data.json()
+            })
+            .then(data=>{
+                var opportunitiesLocations = data[0]; //address which includes city + country
+                var opportunitiesTitles = data[1];
+                opportunitiesLocations.forEach((location)=>{
+                    fetch('https://maps.googleapis.com/maps/api/geocode/json?address='+location+'&key='+mapAPI)
+                    .then(respose=>{
+                        return respose.json()
+                    })
+                    .then(function(jsonObject){
+                        return (jsonObject.results[0].geometry.location) //parse json object to get coordinates
+                    })
+                    .then((data)=>{
+                        const marker =  new google.maps.Marker({
+                            position: {lat: data.lat, lng: data.lng},
+                            map: map,
+                            animation:google.maps.Animation.BOUNCE,
+                            title: opportunitiesTitles[opportunityID]
+                        });  
+                        opportunityID = opportunityID + 1 //id are starting from 1
+                        const infoWindow = new google.maps.InfoWindow({
+                            content: "<a href=opportunities.html?id=" + opportunityID + ">" + "Learn More Here </a>"
+                        });
+                        marker.addListener('click', function() {
+                            toggleBounce();
+                            infoWindow.open(map, marker);
+                            map.setZoom(5);
+                            map.setCenter(marker.getPosition());
+                            window.setTimeout(function() {map.setZoom(3);},5000);
+                        });
+                        function toggleBounce() {
+                            if (marker.getAnimation() !== null) {
+                            marker.setAnimation(null);
+                            } else {
+                            marker.setAnimation(google.maps.Animation.DROP);
+                            }
+                        }
                     });
                 });
             });
