recreated skeleton in front-end

--- a/src/main/webapp/opportunities.html
+++ b/src/main/webapp/opportunities.html
@@ -50,7 +50,7 @@
       }).then((opportunity) => {
         console.log(opportunity)
         //front end build here
-        document.getElementById('title').innerHTML = "ABC"
+        document.getElementById('title').innerHTML = opportunity.title
 
         
 
