About us page version 2

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -1,56 +1,80 @@
-<!--
-Copyright 2019 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-
 <!DOCTYPE html>
+
 <html>
-  <head>
-      <meta charset="UTF-8">
-      <title>About Us</title>
-      <link rel="stylesheet" href="/css/main.css">
-      <link rel="stylesheet" href="/css/aboutus.css">
-      <script src="/js/navigation-loader.js"></script>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<head>
+		<meta charset="UTF-8">
+		<title>CodeU 2019 Starter Project</title>
+		<link rel="stylesheet" href="\css\aboutus.css">
+		<link rel="stylesheet" href="\css\main.css">
+		<script src="/js/navigation-loader.js"></script>
+
   </head>
   <body onload="addNaviMenues();">
     <nav>
       <ul class = "topnav" id="navigation">
       </ul>
     </nav>
-
-    <h1>About Our Team</h1>
-
-    <div class="container-fluid bg-1 text-center">
-        <h3>Team 42</h3>
-        Feza<img src="../images/fezaaboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
-        Aiman<img src="../images/aimanaboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
-        Waqar<img src="../images/waqaraboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
-        Azan<img src="../images/azanaboutus.jpg" class="img-circle" alt="Bird" width="15%" height="15%">
-    </div>
-
-    <div class="container-fluid bg-2 text-center">
-            <h3>Features Implemented</h3> <br>
-            <h4>Feza :  Images part 1 , Styling </h4>
-            <h4>Aiman :  Charts part 1 , Charts part 2</h4>
-            <h4>Waqar :  ML Translation , Opportunities Back-End and Design </h4>
-            <h4>Azan :  Styled Text part 1 , Styled Text part 2 </h4>
-    </div>
+	
+	
+	
+  <div class="heading">
+		<h1>Hi! Meet Our Team</h1>
+		<h3 class="intro" >Team-42, where we have successfully discovered the answers to life, the universe, and everything! We love Food, Music, Coding and Acting.</h3>
+	</div>
+</head>
+<body>
 
 
-  </body>
+<div class="row">
+
+<div class="column">
+<h1 style="color: white">Feza Roheel</h1>
+<div class="container">
+
+  <img src="\images\fezaaa.jpg" alt="Avatar" class="image" style="width:200%; height:100%">
+  <div class="middle">
+    <div class="text"> Worked on: Images part 1, Images part 2, Styling, Public Feed and Message Board Chat with Pagination</div>
+
+  </div>
+</div>
+</div>
+<div class="column">
+<h1 style="color: white">Aiman Hasan</h1>
+<div class="container">
+  <img src="\images\ayman.jpg" alt="Avatar" class="image" style="width:200%">
+  <div class="middle">
+    <div class="text">Worked on:  About Me, Chart1, Charts2, Dashboard Version 1, Homepgae Frontend, About us frontend</div>
+  </div>
+</div>
+</div>
+<div class="column">
+<h1 style="color: white">Waqar Ahmed</h1>
+<div class="container">
+  <img src="\images\waqar.jpg" alt="Avatar" class="image" style="width:200%">
+  <div class="middle">
+    <div class="text">Worked on: Opportunities backend logic, Frontend of one opportunity</div>
+  </div>
+</div>
+</div>
+<div class="column">
+<h1 style="color: white">Azan Bin Zahid</h1>
+ <div class="container">
+  <img src="\images\azan.jpg" alt="Avatar" class="image" style="width:200%">
+  <div class="middle">
+    <div class="text">Worked on: Dashboard Version 2 and Maps Implementation</div>
+  </div>
+</div>
+</div>
+<div class="column">
+<h1 style="color: white">Rauf Rajar</h1>
+ <div class="container">
+  <img src="\images\rauf.jpg" alt="Avatar" class="image" style="width:200%">
+  <div class="middle">
+    <div class="text">Rauf is our PA.</div>
+  </div>
+  </div>
+</div>
+ </div>
+ </div>
+</body>
 </html>
